--- a/flask_app/templates/child.html
+++ b/flask_app/templates/child.html
@@ -4,7 +4,7 @@
     {{ super() }}
 {% endblock %}
 {% block content %}
-    <h1>Index</h1>
+    <h1>석우야 안녕?</h1>
     <p class="important">
       Welcome to my awesome homepage.
     </p>
